# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_unit_test/test.gni")

config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("pw_splitbuf") {
  public_configs = [ ":default_config" ]
  public = [ "public/pw_splitbuf/splitbuf.h" ]
  sources = [ "splitbuf.cc" ]
  public_deps = [
    "$dir_pw_sync:mutex",
    dir_pw_allocator,
    dir_pw_bytes,
    dir_pw_preprocessor,
    dir_pw_result,
    dir_pw_span,
    dir_pw_status,
  ]
}

pw_test("splitbuf_test") {
  deps = [ ":pw_splitbuf" ]
  sources = [ "splitbuf_test.cc" ]
}

pw_test_group("tests") {
  tests = [ ":splitbuf_test" ]
}
